fixes issue with clipped text in firefox dropdowns

--- a/app/assets/stylesheets/partials/dashboard.scss
+++ b/app/assets/stylesheets/partials/dashboard.scss
@@ -152,7 +152,7 @@
 
   & select {
     border: $border;
-    height: 30px;
+    height: 35px;
     padding: 5px;
     width: 100%;
   }
